updated webpage for rubric

--- a/webpagesGL.html
+++ b/webpagesGL.html
@@ -14,7 +14,7 @@
         <link href="webpagesGL.css" rel="stylesheet" type="text/css" />
     </head>
     
-    <body style="background-color:aqua">
+    <body style="background-color:rgb(3, 148, 148)">
         <!-- Here is our welcome message -->
         <header>
             <h2>Welcome to my about me page!</h2>
@@ -25,7 +25,7 @@
         <!-- A photo I like -->
         <img src="unnamed.jpg" alt="A photo of a cool person" id="photo-resize">
 
-        <p> Hi, my name is Claire Nestor. My favorite part of campus is <em>DH Hill Library</em>>. I find myself experiencing true academic <strong>bliss</strong> whenever I enter the majestic doors of that place. Also, my favorite food is corn.</p>
+        <p> Hi, my name is Claire Nestor. <ins>My favorite part of campus</ins> is <em>DH Hill Library</em>>. I find myself experiencing true academic <strong>bliss</strong> whenever I enter the majestic doors of that place. Also, my favorite food is corn.</p>
         
         <p>
             C<sub>8</sub>H<sub>10</sub>O<sub>2</sub> is my favorite element formula. E = mc<sup>2</sup>.
